--- a/user_dashboard/package.json
+++ b/user_dashboard/package.json
@@ -10,6 +10,7 @@
     "emotion": "^10.0.27",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.0.1"
   },
